--- a/index.css
+++ b/index.css
@@ -11,6 +11,10 @@ html {
     box-sizing: border-box;
 }
 
+table {
+    margin: 0 auto;
+}
+
 header {
     margin: 5px;
     text-align: center;
@@ -27,7 +31,7 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777;
     background: #777;
-    width: 600px;
+    width: 960px;
     font-size: 18px;
 }
 
@@ -37,8 +41,9 @@ article {
     text-align: center;
     width: 300px;
     color: white;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     border: #777;
+    height: 185px;
 }
 
 section {
@@ -46,41 +51,41 @@ section {
     background-color: #ebebeb;
     float: left;
     margin: 5px -5px 5px 5px;
-    width: 350px;
+    width: 495px;
     height: 200px;
 }
 
 .flex-container>div {
     background-color: #ebebeb;
-    width: 250px;
-    height: 10px;
-    margin: 10px 10px 10px 20px;
+    width: 400px;
+    height: 8px;
+    margin: 5px 5px 5px 5px;
     text-align: center;
-    line-height: 10px;
+    line-height: 8px;
     font-size: 12px;
     color: #777777;
+    padding: 14px;
 }
 
 article {
-    width: 300px;
+    width: 440px;
     background-color: #777777;
     height: 100px;
-    padding: 10px 10px 10px 20px;
+    padding: 1px 10px 40px 20px;
 }
 
 aside {
     float: left;
     margin: 5px 5px 5px 20px;
     text-align: center;
-    width: 225px;
+    width: 440px;
     height: 200px;
 }
 
 footer {
     text-align: center;
     color: #777777;
-    width: 600px;
-    margin: 5px;
-    padding: 10px;
+    margin: 5px 5px 5px 5px;
+    padding: 8px 10px 8px 10px;
     clear: both;
 }
